# TrustPilotReader

./: .gitignore  LICENSE  Pipfile  README.md  Test.py  TrustPilot.py  companies_ids.csv  pyproject.toml  requirements.txt  test.py  tpreviews.py
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/5j7jK4mGD8luYOlYImT5QsyoPTWRYXNaD9XQdGNgLKY=/: mtrand.cpython-37m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/AkxhmkyRLGwkmYdapdTS4wqfeYQ6Uf4RHCK6mdtKbX4=/: python.sys.pyi  python.time.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/CWuV5q7_x6m_YQFiL5UWAw5QNhVfjkThxQc63ltl4eo=/: _asyncio.cpython-37m-x86_64-linux-gnu.pyi  _bisect.cpython-37m-x86_64-linux-gnu.pyi  _blake2.cpython-37m-x86_64-linux-gnu.pyi  _bz2.cpython-37m-x86_64-linux-gnu.pyi  _contextvars.cpython-37m-x86_64-linux-gnu.pyi  _ctypes.cpython-37m-x86_64-linux-gnu.pyi  _curses.cpython-37m-x86_64-linux-gnu.pyi  _datetime.cpython-37m-x86_64-linux-gnu.pyi  _decimal.cpython-37m-x86_64-linux-gnu.pyi  _hashlib.cpython-37m-x86_64-linux-gnu.pyi  _heapq.cpython-37m-x86_64-linux-gnu.pyi  _json.cpython-37m-x86_64-linux-gnu.pyi  _lzma.cpython-37m-x86_64-linux-gnu.pyi  _md5.cpython-37m-x86_64-linux-gnu.pyi  _multiprocessing.cpython-37m-x86_64-linux-gnu.pyi  _opcode.cpython-37m-x86_64-linux-gnu.pyi  _pickle.cpython-37m-x86_64-linux-gnu.pyi  _posixsubprocess.cpython-37m-x86_64-linux-gnu.pyi  (+20 more)
data/: businesses_ids.csv  reviews.db
tests/: roads.md  test_trustpilotreviews.py
trustpilotreviews/: .gitignore  __init__.py  connect.py  example.py  get_reviews.py  store_reviews.py
(+11 files in other folders)
