[tool.poetry]
name = "trustpilotreviews"
version = "0.1.0"
description = "Unoffice TrustPilot API to download reviews scores and contents"
authors = ["Prayson Wilfred Daniel"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20"
pandas = "^0.23.0"
numpy = "^1.15"
dataset = "^1.1"
stuf = "^0.9.16"
aiohttp = "^3.5"
ipython = "^7.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
