[tool.poetry]
name = "trustpilotreviews"
version = "0.1.1"
description = "Unoffice TrustPilot API to download reviews scores and contents"
authors = ["Prayson Wilfred Daniel <praysonwilfred@gmail.com>"]
homepage = "https://github.com/Proteusiq/TrustPilotReader"
repository = "https://github.com/Proteusiq/TrustPilotReader"
requires = [
    "dataset",
    "pandas",
    "requests",
]
requires-python = "3.6+"
readme = "README.md"


classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20"
pandas = "^0.23.0"
numpy = "^1.15"
dataset = "^1.1"
stuf = "^0.9.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
